# channels

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  docker-compose.yaml  rustfmt.toml
client/: .eslintrc.js  .gitignore  .prettierrc.js  package.json  snowpack.config.js
client/public/: index.html
client/src/: App.svelte  Channels.svelte  Message.svelte  Messages.svelte  store.ts
configs/: config.toml
examples/: etl.js
src/: config.rs  main.rs  middlewares.rs
src/pages/: mod.rs
src/routes/: health.rs  mod.rs  publish.rs  subscribe.rs
static/: index.html
