[package]
name = "channels"
version = "0.1.0"
authors = ["butlerx <butlerx@notthe.cloud>"]
edition = "2018"
description = "Websocket based streaming data channels"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "0.11.1"
nats = "0.8.6"
structopt = "0.3.21"
