[package]
name = "channels"
version = "0.1.0"
authors = ["butlerx <butlerx@notthe.cloud>"]
edition = "2018"
description = "Websocket based streaming data channels"
repository = "https://github.com/butlerx/channels"
license = "Apache-2.0"
readme = "README.md"
include = ["src/**/*", "Cargo.toml", "configs/**/*.toml", "client/**/*"]

[dependencies]
futures = "0.3"
log = "0.4"
nats = "0.8.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
stderrlog = "0.4.3"
structopt = "0.3.21"
tokio = { version = "0.2", features = ["macros", "sync"] }
toml = "0.5.6"
warp = "0.2"
cargo-watch = "7.5.0"
