[package]
name = "channels"
version = "0.1.0"
authors = ["butlerx <butlerx@notthe.cloud>"]
edition = "2018"
description = "Websocket based streaming data channels"
repository = "https://github.com/butlerx/channels"
license = "Apache-2.0"
readme = "README.md"
include = ["src/**/*", "Cargo.toml", "configs/**/*.toml", "client/**/*"]

[dependencies]
futures = "0.3"
lazy_static = "1.4.0"
log = "0.4"
nats = "0.8.6"
prometheus = { version = "0.11.0", features = ["process"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
stderrlog = "0.4.3"
structopt = "0.3.21"
tokio = { version = "1.8", features = ["macros", "sync"] }
toml = "0.5.6"
warp = "0.2"
